--- a/assignment2_stocks.html
+++ b/assignment2_stocks.html
@@ -1,8 +1,19 @@
 <html>
     <head>
-
+        <link href="assignment2.css" rel="stylesheet">
+        <script src="assignment2_stocks.js" defer></script>
     </head>
     <body>
-        
+        <h1>INST377 - Activities</h1>
+
+        <nav id = "main-nav">
+            <ul>
+                <li><a href="assignment2_home.html">HOME</a></li>
+                <li><a href="assignment2_stocks.html">STOCKS</a></li>
+                <li><a href="assignment2_dogs.html">DOGS</a></li>
+            </ul>
+        </nav>
+
+        <h1>Let's chart some stocks!</h1>
     </body>
 </html>
