Finished most of home, just need to do color change with voice. Starting stocks

--- a/assignment2_dogs.html
+++ b/assignment2_dogs.html
@@ -3,6 +3,15 @@
 
     </head>
     <body>
-        
+        <h1>INST377 - Activities</h1>
+
+        <nav id = "main-nav">
+            <ul>
+                <li><a href="assignment2_home.html">HOME</a></li>
+                <li><a href="assignment2_stocks.html">STOCKS</a></li>
+                <li><a href="assignment2_dogs.html">DOGS</a></li>
+            </ul>
+        </nav>
+
     </body>
 </html>
