More progress on stocks, not done with chart still

--- a/assignment2_home.html
+++ b/assignment2_home.html
@@ -53,7 +53,7 @@
                         'hello': () => { alert('Hello world!'); },
                         'navigate to stocks': () => {window.location.href = "assignment2_stocks.html"},
                         'navigate to dogs': () => {window.location.href = "assignment2_dogs.html"},
-                        // 'change color to ': (color) => {document.body.style.backgroundColor = color;}
+                        'change color to *tag': (color) => {document.body.style.backgroundColor = color;}
                     }
                     annyang.addCommands(commands);
                     annyang.start();
