--- a/assignment2_stocks.html
+++ b/assignment2_stocks.html
@@ -24,7 +24,7 @@
             <option value="ninety">90 Days</option>
         </select>
         <br>
-        <input type="button" id="stockLookup" value="Lookup!">
+        <input type="button" id="stockLookup" onclick="createChart()" value="Lookup!">
         <div>
             <canvas id="lineChart"></canvas>
         </div>
