--- a/assignment2_stocks.html
+++ b/assignment2_stocks.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link href="assignment2.css" rel="stylesheet">
-        <script src="assignment2_stocks.js" defer></script>
+        <script src="assignment2_stockschart.js" defer></script>
     </head>
     <body>
         <h1>INST377 - Activities</h1>
@@ -60,7 +60,7 @@
                         'hello': () => { alert('Hello world!'); },
                         'navigate to home': () => {window.location.href = "assignment2_home.html"},
                         'navigate to dogs': () => {window.location.href = "assignment2_dogs.html"},
-                        // 'change color to ': (color) => {document.body.style.backgroundColor = color;}
+                        'change color to *tag': (color) => {document.body.style.backgroundColor = color;}
                     }
                     annyang.addCommands(commands);
                     annyang.start();
